# ToDoList

./: CMakeLists.txt  Memoria.cpp  Memoria.h  Task.cpp  Task.h  Test.cpp  ToDoList.cpp  ToDoList.h  main.cpp
test/: CMakeLists.txt  TaskTest.cpp  Test.cpp
